# docChat

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run.bat
backend/: __init__.py  helpers.py  main.py
data/: memory.db  notes.txt
data/milvus_011c28f4.db/collections/collection_011c28f4/: schema.json
data/milvus_0ae5a4ed.db/collections/collection_0ae5a4ed/: schema.json
data/milvus_0d3a758e.db/collections/collection_0d3a758e/: schema.json
data/milvus_2338c49d.db/collections/collection_2338c49d/: schema.json
data/milvus_33d98424.db/collections/collection_33d98424/: schema.json
data/milvus_433ff2f2.db/collections/collection_433ff2f2/: schema.json
data/milvus_54d04468.db/collections/collection_54d04468/: schema.json
data/milvus_5cb114b0.db/collections/collection_5cb114b0/: schema.json
data/milvus_6d2dbee4.db/collections/collection_6d2dbee4/: schema.json
data/milvus_6ea63d0e.db/collections/collection_6ea63d0e/: schema.json
data/milvus_715d637e.db/collections/collection_715d637e/: schema.json
data/milvus_72bdf4c7.db/collections/collection_72bdf4c7/: schema.json
data/milvus_73990d67.db/collections/collection_73990d67/: manifest.json.prev  schema.json
data/milvus_7661a986.db/collections/collection_7661a986/: schema.json
data/milvus_7a9a2386.db/collections/collection_7a9a2386/: schema.json
data/milvus_805b38e4.db/collections/collection_805b38e4/: schema.json
data/milvus_85305546.db/collections/collection_85305546/: schema.json
data/milvus_8b8b2b45.db/collections/collection_8b8b2b45/: schema.json
data/milvus_8d907804.db/collections/collection_8d907804/: schema.json
data/milvus_9af3ca77.db/collections/collection_9af3ca77/: schema.json
data/milvus_9bbedc91.db/collections/collection_9bbedc91/: schema.json
data/milvus_b03c87c7.db/collections/collection_b03c87c7/: schema.json
data/milvus_b7d44d4f.db/collections/collection_b7d44d4f/: schema.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.module.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/audio/: page.module.css  page.tsx
notebooks/: notebook-lm-walkthrough.ipynb
outputs/: podcast_script.json
scripts/: gen_theme.py  patch_index.py
src/: __init__.py
src/audio/: audio_study_guide.py  text_to_speech.py
src/audio_processing/: audio_transcriber.py  local_transcriber.py  youtube_transcriber.py
src/discovery/: web_discovery.py
src/document_processing/: chunk_cache.py  chunking_service.py  doc_processor.py  document_chunk.py  process_result.py
src/embeddings/: embed_cache.py  embedding_generator.py
src/generation/: hybrid_search.py  notebook_bm25.py  rag.py  rag_v2.py
src/ingest/: ingest_jobs.py  pipeline.py
src/llm/: __init__.py  llm_router.py  model_registry.py
src/memory/: local_memory.py  memory_layer.py
src/podcast/: script_generator.py  text_to_speech.py
src/study_tools/: __init__.py
src/tts/: orpheus_client.py
src/vector_database/: chunk_reference_tracker.py  milvus_vector_db.py
src/web_scraping/: local_scraper.py  web_scraper.py
src/youtube/: __init__.py  transcript.py
static/: icons.js  index.html  theme.css
tests/: notebook_pipeline.py
(+32 files in other folders)
