[project]
name = "study-companion"
version = "2.0.0"
description = "AI-powered Study Companion - Complete study tool with RAG, quizzes, flashcards, canvas, and more"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.1.1",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",

    # Document Processing
    "pymupdf>=1.26.4",

    # Embeddings & Vector DB
    "fastembed>=0.7.3",
    "pymilvus[milvus-lite]>=2.6.2",
    "numpy>=1.26.0",

    # Audio (local - replaces AssemblyAI)
    "faster-whisper>=1.1.0",
    "soundfile>=0.12.1",
    "yt-dlp>=2024.12.13",

    # Web Scraping (local - replaces Firecrawl)
    "beautifulsoup4>=4.12.0",

    # Utilities
    "python-multipart>=0.0.12",

    # TTS (Edge TTS - lightweight, no C++ compilation)
    "edge-tts>=6.1.12",
    
    # Gemini API SDK
    "google-genai>=0.1.0",
]

[project.optional-dependencies]
scraping = [
    # For JS-heavy websites (optional, BS4 handles most sites)
    "playwright>=1.48.0",
]

[project.scripts]
serve = "uvicorn backend.main:app --reload --host 0.0.0.0 --port 8000"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.17",
]

[tool.pyright]
include = ["src", "backend"]
extraPaths = ["."]
