[project]
name = "docchat"
version = "2.0.0"
description = "DocChat — Multi-notebook document Q&A with AI writing assist."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.12",
    # Document processing
    "pymupdf>=1.26.4",
    # Embeddings & Vector DB (local, no API needed)
    "fastembed>=0.7.3",
    "pymilvus>=2.6.2",
    "milvus-lite>=3.0",
    "numpy>=1.26.0",
    # Hybrid search (BM25 keyword matching)
    "bm25s>=0.2.0",
    # Web scraping
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=2.0.0",
    "duckduckgo-search>=7.0.0",
    # YouTube transcripts
    "yt-dlp>=2024.12.13",
    # LLM (Gemini API)
    "google-genai>=0.1.0",
    # Data models
    "pydantic>=2.0.0",
    # Document export
    "python-docx>=1.0.0",
    "htmldocx>=0.0.6",
    "markdownify>=0.13.0",
]

[project.scripts]
serve = "uvicorn backend.main:app --host 0.0.0.0 --port 8000"

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.pyright]
include = ["src", "backend"]
extraPaths = ["."]
